<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="inputID">Enter your ID Number:</string>
    <string name="app_name">Space Rayders</string>
    <string name="inputHint">ID Number</string>
    <string name="playerNameHint">Player Name</string>
    <string name="gameNameHint">Name of Game</string>
    <string name="okText">OK</string>
    <string name="cancelText">Cancel</string>
    <string name="playerNameInputText">Enter a Player Name:</string>
    <string name="gameNameInputText">Enter a name for this game:</string>
    <string name="directionTitleText">Directions</string>
    <string name="directionBodyText">
        The Game: Each player earns points during the time they are IT. Your job is to stay away from the person that is IT and try to be as close to everyone else when you are IT. \n 
        Step 1: Click your context menu and select the color you want to be in the top drop down menu. Each person playing should have their own color.
        Then check the boxes of the colors playing with you, including your own color. Click "Save." \n 
        Step 2: Press back and then once everyone is ready to start press "Play Game" at the same time. </string>
    <string name="creationDirectionBodyText">You will now need to wait for players to join. The game will begin at the time on the next screen. Press OK to begin waiting for players.</string>
    <string name="devicesListTitleText">Get Moving!</string>
    <string name="joinStartLabelText">Tele-Tag</string>
    <string name="joinGameBttnText">Play Game</string>
    <string name="startGameBttnText">Start Game</string>
    <string name="scoreText">0</string>
    <string name="setupTeamHeaderText">Game Settings</string>
    <string name="selectColorText">Select team color:</string>
    <string name="backupAgent_name">PhoneTagBackupAgent</string>
    <string name="gameSelectionTitleText">Wait For Games to be Found</string>
    <string name="gameSelectionBodyText">Click the Game You Want To Play</string>
    <string name="gameSelectionButtonText">goToWaitingRoom</string>
    <string name="serverLobbyHeaderText">Please wait for players to join</string>
    <string name="finalScoreHeaderText">Final Score</string>
    <string name="finalScoreBodyText">Good job!</string>
    <string name="howToPlayTitleText">How To Play</string>
    <string name="howToSetUpTitleText">Set Up</string>
    <string name="howToPlayGameTitleText">The Game</string>
    <string name="howToGainPointsTitleText">Points</string>
    <string name="howToGameBodyText">Each game will last 2 minutes long. Once the game begins it will display the
           name of whoever is \"IT\" and your current score. Your goal is to try to stay away from the person who is \"IT\". If you are \"IT\" your goal
           is to try and stay as close to as many other players as possible. Everyone will have their turn to be \"IT\" so be ready to run. The phone
           will vibrate when a different person is \"IT\" and tell you if you are \"IT.\" \n</string>
    <string name="howToGainPointsBodyText">You can only gain points during the time you are \"IT.\" You receive points for every 
	    player you are close to.</string>
    <string name="startGameMenuOption">Settings</string>
    <string name="helpMenuOption">Help</string>
    <string name="spinnerPrompt">Select Phone Color</string>
    <string name="chk_blk">Black</string>
    <string name="chk_blue">Blue</string>
    <string name="chk_grn">Green</string>
    <string name="chk_pnk">Pink</string>
    <string name="chk_red">Red</string>
    <string name="chk_sil">Silver</string>
    <string name="saveBtn">Save</string>
    
    <string-array name="color_options">
        <item>Black</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Red</item>
        <item>Silver</item>
    </string-array>

</resources>