<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/modeLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:text="@string/playerNameInputText" />

        <EditText
            android:id="@+id/editview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/modeLabel"
            android:hint="@string/playerNameHint"
            android:inputType="text" />

        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editview"
            android:layout_alignParentRight="true"
            android:onClick="onClick"
            android:text="@string/okText" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/ok"
            android:layout_toLeftOf="@id/ok"
            android:onClick="endActivity"
            android:text="@string/cancelText" />
    </RelativeLayout>

</ScrollView>