<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <EditText
        android:id="@+id/editview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ok"
        android:layout_alignParentLeft="true"
        android:ems="10"
        android:hint="@string/inputHint"
        android:inputType="phone" />

    <Button
        android:id="@+id/ok"
        android:layout_width="@dimen/optionOkCancelWidth"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/cancel"
        android:onClick="enterID"
        android:text="@string/okText" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="@dimen/optionOkCancelWidth"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/ok"
        android:onClick="exitApp"
        android:text="@string/cancelText" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/fitnessapps" />

    <TextView
        android:id="@+id/textview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editview"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="17dp"
        android:text="@string/inputID"
        android:textColor="#5CADFF"
        android:textSize="20sp" />

</RelativeLayout>